--- a/css/style.css
+++ b/css/style.css
@@ -152,12 +152,14 @@ header .menu button img {
 }
 
 main {
+  width: 100%;
+  margin: 0 auto;
   font-size: 11pt;
 }
 
 main .resume {
   width: 364mm;
-  margin: 60px 10px 10px;
+  margin: 60px auto 10px;
   display: grid;
   grid-template-columns: 182mm 182mm;
   border: 1px solid rgba(0, 0, 0, 0.5);
@@ -257,6 +259,10 @@ main .resume .left-page .id-photo label input {
 main .resume .left-page .id-photo label img {
   width: 100%;
   height: 100%;
+}
+
+main .resume .left-page .id-photo label img[src="null"] {
+  display: none;
 }
 
 main .resume .left-page .personal-data p.label {
