--- a/scss/style.scss
+++ b/scss/style.scss
@@ -206,8 +206,28 @@ main {
             width: 100%;
             height: 100%;
           }
-          img[src="null"] {
+          img[src=""] {
             display: none;
+          }
+        }
+        #contextmenu{
+          display:none;
+          position:fixed;
+          left:0px;
+          top:0px;
+          width:100px;
+          height:30px;
+          border:1px solid #333;
+          box-shadow: 2px 2px 5px #333;
+          background-color:#eee;
+          z-index: 2;
+          li {
+            height: 30px;
+            line-height: 30px;
+            cursor:pointer;
+            &:hover {
+              background-color: #aaa;
+            }
           }
         }
       }
@@ -582,6 +602,64 @@ main {
             height: 43.8mm;
           }  
         }
+      }
+    }
+  }
+  #help-window {
+    display: none;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
+    // max-width: 832px;
+    width: 90vw;
+    height: 90vh;
+    padding: 16px;
+    border-radius: 24px;
+    box-shadow: 0 0 0 10000px rgba(0, 0, 0, 0.5);
+    background-color: #fff;
+    animation: fade 0.5s linear 0s;
+    &.show {
+      display: block;
+      z-index: 4;
+    }
+    .help-close {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      // border: 5px solid #333;
+      box-shadow: 0 0 3px #333;
+      background-color: #fff;
+      position: absolute;
+      top: -10px;
+      right: -10px;
+      &::before {
+        content: '';
+        width: 30px;
+        height: 5px;
+        background-color: #333;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        margin: auto;
+        transform: rotate(-45deg);
+      }
+      &::after {
+        content: '';
+        width: 30px;
+        height: 5px;
+        background-color: #333;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        margin: auto;
+        transform: rotate(45deg);
       }
     }
   }
