idPhoto bug fix

--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,5 +1,6 @@
 $line-color : #000;
 
 $print-line-bold: 1mm solid $line-color;
-$print-line-default: 0.2mm solid $line-color;
+$print-line-middle: 0.7mm solid $line-color;
+$print-line-default: 0.35mm solid $line-color;
 $print-line-double: 1mm double $line-color;
