--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,12 @@ body * {
   box-sizing: border-box;
 }
 
+@media screen {
+  body {
+    background-color: #eee;
+  }
+}
+
 header {
   width: 100%;
   height: 50px;
@@ -49,6 +55,12 @@ header {
   position: fixed;
   top: 0;
   z-index: 1;
+}
+
+@media print {
+  header {
+    display: none;
+  }
 }
 
 header .menu {
@@ -151,6 +163,24 @@ header .menu button img {
   height: 24px;
 }
 
+header #print-dialog {
+  display: none;
+  width: 200px;
+  height: 100px;
+  padding: 10px;
+}
+
+header #print-dialog.show {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  grid-template-rows: repeat(2, 1fr);
+}
+
+header #print-dialog #print-size {
+  grid-column: 1 / 3;
+}
+
 main {
   width: 100%;
   margin: 0 auto;
@@ -163,6 +193,25 @@ main .resume {
   display: grid;
   grid-template-columns: 182mm 182mm;
   border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+@media print {
+  main .resume {
+    margin: 0;
+  }
+}
+
+@media screen {
+  main .resume {
+    background-color: #fff;
+  }
+}
+
+@media screen and (max-width: 200mm) {
+  main .resume {
+    width: 182mm;
+    grid-template-columns: 182mm;
+  }
 }
 
 main .resume .page {
@@ -230,7 +279,7 @@ main .resume .left-page .id-photo {
   position: absolute;
   top: 14mm;
   right: 21mm;
-  border: 0.2mm solid #000;
+  border: 0.35mm solid #000;
   text-align: center;
 }
 
@@ -278,6 +327,10 @@ main .resume .left-page .id-photo #contextmenu {
   z-index: 2;
 }
 
+main .resume .left-page .id-photo #contextmenu.show {
+  display: block;
+}
+
 main .resume .left-page .id-photo #contextmenu li {
   height: 30px;
   line-height: 30px;
@@ -312,8 +365,8 @@ main .resume .left-page .personal-data .basic-data .name-furigana {
   display: grid;
   grid-template-columns: 15mm 78mm;
   border-top: 1mm solid #000;
-  border-right: 0.2mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-right: 0.35mm solid #000;
+  border-bottom: 0.35mm solid #000;
   border-left: 1mm solid #000;
 }
 
@@ -333,8 +386,8 @@ main .resume .left-page .personal-data .basic-data .name {
   grid-row: 2 / 3;
   display: grid;
   grid-template-columns: 15mm 78mm;
-  border-right: 0.2mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-right: 0.35mm solid #000;
+  border-bottom: 0.35mm solid #000;
   border-left: 1mm solid #000;
 }
 
@@ -353,7 +406,7 @@ main .resume .left-page .personal-data .basic-data .gender {
   grid-column: 2 / 3;
   border-top: 1mm solid #000;
   border-right: 1mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-bottom: 0.35mm solid #000;
   display: grid;
   grid-template-columns: 1fr;
   align-items: center;
@@ -368,7 +421,7 @@ main .resume .left-page .personal-data .basic-data .birthday {
   grid-row: 3 / 4;
   grid-column: 1 / 3;
   border-right: 1mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-bottom: 0.35mm solid #000;
   border-left: 1mm solid #000;
   display: grid;
   grid-template-columns: 19mm 26mm 5mm 9mm 5mm 9mm 18mm 10mm 10mm;
@@ -386,14 +439,15 @@ main .resume .left-page .personal-data .emergency-contact {
   grid-template-rows: 7.3mm 6mm 9mm;
   border-left: 1mm solid #000;
   border-right: 1mm solid #000;
+  border-bottom: 0.35mm solid #000;
 }
 
 main .resume .left-page .personal-data .contact-info .resides-furigana,
 main .resume .left-page .personal-data .emergency-contact .resides-furigana {
   grid-row: 1 / 2;
   grid-column: 1 / 3;
-  border-right: 0.2mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-right: 0.35mm solid #000;
+  border-bottom: 0.35mm solid #000;
   display: grid;
   grid-template-columns: 18mm 92mm;
   font-size: 9pt;
@@ -403,7 +457,7 @@ main .resume .left-page .personal-data .contact-info .postal-code,
 main .resume .left-page .personal-data .emergency-contact .postal-code {
   grid-row: 2 / 3;
   grid-column: 1 / 3;
-  border-right: 0.2mm solid #000;
+  border-right: 0.35mm solid #000;
   display: grid;
   grid-template-columns: 18mm 9mm 12mm 5mm 16mm 5mm;
 }
@@ -419,8 +473,7 @@ main .resume .left-page .personal-data .emergency-contact .resides {
   grid-row: 3 / 4;
   grid-column: 1 / 3;
   font-size: 11pt;
-  border-right: 0.2mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-right: 0.35mm solid #000;
   align-self: center;
 }
 
@@ -434,7 +487,7 @@ main .resume .left-page .personal-data .emergency-contact .phone-number {
   grid-row: 1 / 2;
   grid-column: 3 / 4;
   border-top: 1mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-bottom: 0.35mm solid #000;
   display: grid;
   grid-template-columns: 9mm 26mm;
 }
@@ -454,7 +507,6 @@ main .resume .left-page .personal-data .emergency-contact .e-mail {
   height: 15mm;
   grid-row: 2 / 4;
   grid-column: 3 / 4;
-  border-bottom: 0.2mm solid #000;
   display: grid;
   grid-template-columns: 35mm;
   grid-template-rows: 6mm 9mm;
@@ -472,15 +524,15 @@ main .resume .left-page .personal-data .emergency-contact .e-mail p.input-field 
   height: 9mm;
 }
 
+main .resume .left-page .personal-data .emergency-contact {
+  border-bottom: 1mm solid #000;
+}
+
 main .resume .left-page .personal-data .emergency-contact .phone-number {
   border-top: none;
 }
 
-main .resume .left-page .education-and-career-history .resume-line:last-of-type {
-  border-bottom: 1mm solid #000;
-}
-
-main .resume .education-and-career-history .resume-line {
+main .resume .left-page .education-and-career-history .resume-line {
   width: 148mm;
   height: 7.3mm;
   display: grid;
@@ -488,44 +540,71 @@ main .resume .education-and-career-history .resume-line {
   text-align: center;
   border-left: 1mm solid #000;
   border-right: 1mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-bottom: 0.35mm solid #000;
 }
 
-main .resume .education-and-career-history .resume-line:first-of-type {
+main .resume .left-page .education-and-career-history .resume-line:first-of-type {
   border-bottom: 1mm double #000;
 }
 
-main .resume .education-and-career-history .resume-line p {
-  border-right: 0.2mm solid #000;
+main .resume .left-page .education-and-career-history .resume-line:first-of-type p:last-of-type {
+  text-align: center;
 }
 
-main .resume .education-and-career-history .resume-line p:last-of-type {
+main .resume .left-page .education-and-career-history .resume-line:last-of-type {
+  border-bottom: 1mm solid #000;
+}
+
+main .resume .left-page .education-and-career-history .resume-line p {
+  line-height: 7.3mm;
+  padding: 0 1mm;
+  border-right: 0.35mm solid #000;
+}
+
+main .resume .left-page .education-and-career-history .resume-line p:last-of-type {
+  text-align: left;
+  padding: 0 2mm;
   border-right: none;
 }
 
-main .resume .right-page p {
-  padding: 1mm;
-}
-
 main .resume .right-page .education-and-career-history {
-  margin-top: 8.5mm;
+  margin-top: 8.3mm;
 }
 
-main .resume .right-page .education-and-career-history p {
-  padding: 0 1mm;
+main .resume .right-page .education-and-career-history .resume-line {
+  width: 148mm;
+  height: 7.3mm;
+  display: grid;
+  grid-template-columns: 22.5mm 12.5mm 111mm;
+  text-align: center;
+  border-left: 1mm solid #000;
+  border-right: 1mm solid #000;
+  border-bottom: 0.35mm solid #000;
 }
 
 main .resume .right-page .education-and-career-history .resume-line:first-of-type {
+  height: 8.3mm;
   border-top: 1mm solid #000;
+  border-bottom: 1mm double #000;
+}
+
+main .resume .right-page .education-and-career-history .resume-line:first-of-type p:last-of-type {
+  text-align: center;
+}
+
+main .resume .right-page .education-and-career-history .resume-line:last-of-type {
+  border-bottom: 1mm solid #000;
 }
 
 main .resume .right-page .education-and-career-history .resume-line p {
-  height: 100%;
   line-height: 7.3mm;
+  border-right: 0.35mm solid #000;
 }
 
-main .resume .right-page .qualifications p {
-  padding: 0 1mm;
+main .resume .right-page .education-and-career-history .resume-line p:last-of-type {
+  text-align: left;
+  padding: 0 2mm;
+  border-right: none;
 }
 
 main .resume .right-page .qualifications .qualifications-line {
@@ -536,18 +615,29 @@ main .resume .right-page .qualifications .qualifications-line {
   text-align: center;
   border-left: 1mm solid #000;
   border-right: 1mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-bottom: 0.35mm solid #000;
 }
 
 main .resume .right-page .qualifications .qualifications-line:first-of-type {
   border-bottom: 1mm double #000;
 }
 
+main .resume .right-page .qualifications .qualifications-line:first-of-type p:last-of-type {
+  text-align: center;
+}
+
+main .resume .right-page .qualifications .qualifications-line:last-of-type {
+  border-bottom: 1mm solid #000;
+}
+
 main .resume .right-page .qualifications .qualifications-line p {
-  border-right: 0.2mm solid #000;
+  padding: 0 1mm;
+  line-height: 7.3mm;
+  border-right: 0.35mm solid #000;
 }
 
 main .resume .right-page .qualifications .qualifications-line p:last-of-type {
+  text-align: left;
   border-right: none;
 }
 
@@ -557,6 +647,10 @@ main .resume .right-page .motivation {
   grid-template-rows: repeat(3, 14.6mm);
 }
 
+main .resume .right-page .motivation p {
+  padding: 1mm;
+}
+
 main .resume .right-page .motivation .label {
   font-size: 10pt;
 }
@@ -564,20 +658,20 @@ main .resume .right-page .motivation .label {
 main .resume .right-page .motivation .self-promotion {
   grid-row: 1 / 4;
   grid-column: 1 / 2;
-  border-right: 0.2mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-right: 0.35mm solid #000;
+  border-bottom: 1mm solid #000;
   border-left: 1mm solid #000;
 }
 
 main .resume .right-page .motivation .self-promotion p.input-field {
-  height: 40mm;
+  height: 37mm;
 }
 
 main .resume .right-page .motivation .commuting-time {
   grid-row: 1 / 2;
   grid-column: 2 / 4;
   border-right: 1mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-bottom: 0.35mm solid #000;
 }
 
 main .resume .right-page .motivation .commuting-time .commuting-time-line {
@@ -586,10 +680,14 @@ main .resume .right-page .motivation .commuting-time .commuting-time-line {
   grid-template-columns: 19mm 10mm 10mm 10mm 10mm;
 }
 
+main .resume .right-page .motivation .commuting-time .commuting-time-line .input-field {
+  text-align: right;
+}
+
 main .resume .right-page .motivation .dependents {
   grid-row: 2 / 3;
   grid-column: 2 / 4;
-  border-bottom: 0.2mm solid #000;
+  border-bottom: 0.35mm solid #000;
   border-right: 1mm solid #000;
 }
 
@@ -605,15 +703,27 @@ main .resume .right-page .motivation .dependents .dependents-line p.input-field 
 main .resume .right-page .motivation .marital-status {
   grid-row: 3 / 4;
   grid-column: 2 / 3;
-  border-right: 0.2mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-right: 0.35mm solid #000;
+  border-bottom: 1mm solid #000;
+}
+
+main .resume .right-page .motivation .marital-status .input-field {
+  text-align: center;
 }
 
 main .resume .right-page .motivation .obligation-to-support-spouse {
   grid-row: 3 / 4;
   grid-column: 3 / 4;
   border-right: 1mm solid #000;
-  border-bottom: 0.2mm solid #000;
+  border-bottom: 1mm solid #000;
+}
+
+main .resume .right-page .motivation .obligation-to-support-spouse .label {
+  font-size: 9pt;
+}
+
+main .resume .right-page .motivation .obligation-to-support-spouse .input-field {
+  text-align: center;
 }
 
 main .resume .right-page .objective {
@@ -624,8 +734,13 @@ main .resume .right-page .objective {
   border-left: 1mm solid #000;
 }
 
+main .resume .right-page .objective p {
+  padding: 1mm;
+}
+
 main .resume .right-page .objective p.label {
   height: 7.3mm;
+  line-height: 4.3mm;
   font-size: 10pt;
   border-bottom: 1mm double #000;
 }
@@ -696,5 +811,11 @@ main #help-window .help-close::after {
 footer {
   height: 50px;
   text-align: center;
+}
+
+@media print {
+  footer {
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
