--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "reset";
 @import "variable";
+@import "mixin";
 // * {
 //   outline: 1px solid red;
 // }
@@ -11,6 +12,9 @@ html, body {
 body {
   *{
     box-sizing: border-box;
+  }
+  @media screen {
+    background-color: #eee;
   }
 }
 header {
@@ -26,6 +30,9 @@ header {
   position: fixed;
   top: 0;
   z-index: 1;
+  @media print {
+    display: none;
+  }
   .menu {
     display: grid;
     grid-template-columns: repeat(auto-fill, 40px);
@@ -85,7 +92,7 @@ header {
           transition: 0.4s;
           cursor: pointer;
         }
-      } 
+      }
     }
     >label {
       width: 40px;
@@ -114,6 +121,27 @@ header {
       }
     }
   }
+  #print-dialog {
+    display: none;
+    width: 200px;
+    height: 100px;
+    padding: 10px;
+    &.show {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+      grid-template-rows: repeat(2, 1fr);
+    }
+    #print-size {
+      grid-column: 1 / 3;
+    }
+    #printing {
+
+    }
+    #dialog-close {
+
+    }
+  }
 }
 // 履歴書（B5サイズ: 182mm×257mm x 2（左右ページ合わせてB4:364mmx257mm）, 余白: 上下左右17mm）
 // 履歴書（A4サイズ: 210mm×297mm x 2（左右ページ合わせてA3:420mmx297mm）, 余白: 上下左右17mm）
@@ -127,6 +155,17 @@ main {
     display: grid;
     grid-template-columns: 182mm 182mm;
     border: 1px solid rgba(0, 0, 0, 0.5);
+    @media print {
+      margin: 0;
+      // border: none;
+    }
+    @media screen {
+      background-color: #fff;
+    }
+    @media screen and (max-width: 200mm) {
+      width: 182mm;
+      grid-template-columns: 182mm;
+    }
     .page {
       width: 182mm;
       height: 257mm;
@@ -221,6 +260,9 @@ main {
           box-shadow: 2px 2px 5px #333;
           background-color:#eee;
           z-index: 2;
+          &.show {
+            display: block;
+          }
           li {
             height: 30px;
             line-height: 30px;
@@ -334,6 +376,7 @@ main {
           border: {
             left: $print-line-bold;
             right: $print-line-bold;
+            bottom: $print-line-default;
           }
           .resides-furigana {
             grid-row: 1 / 2;
@@ -367,7 +410,6 @@ main {
             font-size: 11pt;
             border: {
               right: $print-line-default;
-              bottom: $print-line-default;
             }
             align-self: center;
             p.input-field {
@@ -396,9 +438,6 @@ main {
             height: 15mm;
             grid-row: 2 / 4;
             grid-column: 3 / 4;
-            border: {
-              bottom: $print-line-default;
-            }
             display: grid;
             grid-template-columns: 35mm;
             grid-template-rows: 6mm 9mm;
@@ -415,6 +454,9 @@ main {
           }
         }
         .emergency-contact {
+          border:  {
+            bottom: $print-line-bold;
+          }
           .phone-number {
             border: {
               top: none;
@@ -424,68 +466,95 @@ main {
       }
       .education-and-career-history {
         .resume-line {
+          width: 148mm;
+          height: 7.3mm;
+          display: grid;
+          grid-template-columns: 22.5mm 12.5mm 111mm; // 両脇枠線分2mm引き
+          text-align: center;
+          border: {
+            left: $print-line-bold;
+            right: $print-line-bold;
+            bottom: $print-line-default ;
+          }
+          &:first-of-type {
+            border: {
+              bottom: $print-line-double;
+            }
+            p {
+              &:last-of-type {
+                text-align: center;
+              }
+            }
+          }
           &:last-of-type {
             border: {
               bottom: $print-line-bold;
             }
           }
-        }
-      }
-    }
-    .education-and-career-history {
-      .resume-line {
-        width: 148mm;
-        height: 7.3mm;
-        display: grid;
-        grid-template-columns: 22.5mm 12.5mm 111mm; // 両脇枠線分2mm引き
-        text-align: center;
-        border: {
-          left: $print-line-bold;
-          right: $print-line-bold;
-          bottom: $print-line-default ;
-        }
-        &:first-of-type {
-          border: {
-            bottom: $print-line-double;
-          }
-        }
-        p {
-          border: {
-            right: $print-line-default ;
-          }
-          &:last-of-type {
+          p {
+            line-height: 7.3mm;
+            padding: 0 1mm;
             border: {
-              right: none;
+              right: $print-line-default ;
+            }
+            &:last-of-type {
+              text-align: left;
+              padding: 0 2mm;
+              border: {
+                right: none;
+              }
             }
           }
         }
       }
     }
     .right-page {
-      p {
-        padding: 1mm;
-      }
       .education-and-career-history {
-        p{
-          padding: 0 1mm;
-        }  
-        margin-top: 8.5mm;
+        margin-top: 8.3mm;
         .resume-line {
+          width: 148mm;
+          height: 7.3mm;
+          display: grid;
+          grid-template-columns: 22.5mm 12.5mm 111mm; // 両脇枠線分2mm引き
+          text-align: center;
+          border: {
+            left: $print-line-bold;
+            right: $print-line-bold;
+            bottom: $print-line-default ;
+          }
           &:first-of-type {
+            height: 8.3mm;
             border: {
               top: $print-line-bold;
+              bottom: $print-line-double;
+            } 
+            p {
+              &:last-of-type {
+                text-align: center;
+              }
+            }
+          }
+          &:last-of-type {
+            border: {
+              bottom: $print-line-bold;
             }
           }
           p {
-            height: 100%;
             line-height: 7.3mm;
+            border: {
+              right: $print-line-default;
+            }
+            &:last-of-type {
+              text-align: left;
+              padding: 0 2mm;
+              border: {
+                right: none;
+              }
+            }
           }
         }
       }
       .qualifications {
-        p{
-          padding: 0 1mm;
-        }  
         .qualifications-line {
           width: 148mm;
           height: 7.3mm;
@@ -501,12 +570,25 @@ main {
             border: {
               bottom: $print-line-double;
             }
+            p {
+              &:last-of-type {
+                text-align: center;
+              }
+            }
+          }
+          &:last-of-type {
+            border: {
+              bottom: $print-line-bold;
+            };
           }
           p {
+            padding: 0 1mm;
+            line-height: 7.3mm;
             border: {
               right: $print-line-default ;
             }
             &:last-of-type {
+              text-align: left;
               border: {
                 right: none;
               }
@@ -518,6 +600,9 @@ main {
         display: grid;
         grid-template-columns: 89mm 29mm 30mm;
         grid-template-rows: repeat(3, 14.6mm);
+        p {
+          padding: 1mm;
+        }
         .label {
           font-size: 10pt;
         }
@@ -526,12 +611,12 @@ main {
           grid-column: 1 / 2;
           border: {
             right: $print-line-default;
-            bottom: $print-line-default;
+            bottom: $print-line-bold;
             left: $print-line-bold;
           }
           p {
             &.input-field{
-              height: 40mm;
+              height: 37mm;
             }
           }
         }
@@ -546,6 +631,9 @@ main {
             text-align: center;
             display: grid;
             grid-template-columns: 19mm 10mm 10mm 10mm 10mm;
+            .input-field {
+              text-align: right;
+            }
           }        
         }
         .dependents{
@@ -570,7 +658,10 @@ main {
           grid-column: 2 / 3;
           border: {
             right: $print-line-default;
-            bottom: $print-line-default;
+            bottom: $print-line-bold;
+          }
+          .input-field {
+            text-align: center;
           }
         }
         .obligation-to-support-spouse {
@@ -578,7 +669,13 @@ main {
           grid-column: 3 / 4;
           border: {
             right: $print-line-bold;
-            bottom: $print-line-default;
+            bottom: $print-line-bold;
+          }
+          .label {
+            font-size: 9pt;
+          }
+          .input-field {
+            text-align: center;
           }
         }
       }
@@ -591,8 +688,10 @@ main {
           left: $print-line-bold;
         }
         p {
+          padding: 1mm;
           &.label {
             height: 7.3mm;
+            line-height: 4.3mm;
             font-size: 10pt;
             border: {
               bottom: $print-line-double;
@@ -667,4 +766,8 @@ main {
 footer {
   height: 50px;
   text-align: center;
+
+  @media print {
+    display: none;
+  }
 }
