--- a/scss/style.scss
+++ b/scss/style.scss
@@ -764,8 +764,9 @@ main {
   }
 }
 footer {
-  height: 50px;
+  height: 30px;
   text-align: center;
+  line-height: 30px;
 
   @media print {
     display: none;
