Printing function is being implemented

--- a/css/b4.css
+++ b/css/b4.css
@@ -26,7 +26,7 @@ img {
   height: auto;
 }
 
-/* page styleing
+/* page styleing b4
 ---------------------------------------------------------------------------- */
 html, body {
   scroll-behavior: smooth;
@@ -38,7 +38,7 @@ body * {
 
 @media screen {
   body {
-    background-color: #eee;
+    background-color: green;
   }
 }
 
@@ -567,6 +567,18 @@ main .resume .left-page .education-and-career-history .resume-line p:last-of-typ
   border-right: none;
 }
 
+main .resume .left-page .education-and-career-history .resume-line p[data-text-align="left"] {
+  text-align: left;
+}
+
+main .resume .left-page .education-and-career-history .resume-line p[data-text-align="right"] {
+  text-align: right;
+}
+
+main .resume .left-page .education-and-career-history .resume-line p[data-text-align="center"] {
+  text-align: center;
+}
+
 main .resume .right-page .education-and-career-history {
   margin-top: 8.3mm;
 }
@@ -607,6 +619,18 @@ main .resume .right-page .education-and-career-history .resume-line p:last-of-ty
   border-right: none;
 }
 
+main .resume .right-page .education-and-career-history .resume-line p[data-text-align="left"] {
+  text-align: left;
+}
+
+main .resume .right-page .education-and-career-history .resume-line p[data-text-align="right"] {
+  text-align: right;
+}
+
+main .resume .right-page .education-and-career-history .resume-line p[data-text-align="center"] {
+  text-align: center;
+}
+
 main .resume .right-page .qualifications .qualifications-line {
   width: 148mm;
   height: 7.3mm;
@@ -639,6 +663,18 @@ main .resume .right-page .qualifications .qualifications-line p {
 main .resume .right-page .qualifications .qualifications-line p:last-of-type {
   text-align: left;
   border-right: none;
+}
+
+main .resume .right-page .qualifications .qualifications-line p[data-text-align="left"] {
+  text-align: left;
+}
+
+main .resume .right-page .qualifications .qualifications-line p[data-text-align="right"] {
+  text-align: right;
+}
+
+main .resume .right-page .qualifications .qualifications-line p[data-text-align="center"] {
+  text-align: center;
 }
 
 main .resume .right-page .motivation {
