--- a/scss/a4.scss
+++ b/scss/a4.scss
@@ -4,7 +4,7 @@
 // * {
 //   outline: 1px solid red;
 // }
-/* page styleing b4
+/* page styleing a4
 ---------------------------------------------------------------------------- */
 html, body {
   scroll-behavior: smooth;
@@ -15,7 +15,7 @@ body {
   }
   @media screen {
     // background-color: #eee;
-    background-color: green;
+    background-color: blue;
   }
 }
 header {
