--- a/css/a3.css
+++ b/css/a3.css
@@ -26,7 +26,7 @@ img {
   height: auto;
 }
 
-/* page styleing
+/* page styleing a3
 ---------------------------------------------------------------------------- */
 html, body {
   scroll-behavior: smooth;
@@ -38,7 +38,7 @@ body * {
 
 @media screen {
   body {
-    background-color: #eee;
+    background-color: pink;
   }
 }
 
@@ -54,7 +54,7 @@ header {
   background-color: #fff;
   position: fixed;
   top: 0;
-  z-index: 10;
+  z-index: 1;
 }
 
 @media print {
@@ -83,7 +83,7 @@ header .menu .editing-switch input {
 }
 
 header .menu .editing-switch input:checked + label {
-  background-color: #4bd865;
+  background-color: #4BD865;
 }
 
 header .menu .editing-switch input:checked + label::before {
@@ -125,6 +125,7 @@ header .menu .editing-switch label::after {
   width: 20px;
   height: 20px;
   border-radius: 100%;
+  z-index: 2;
   background-color: #fff;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   transition: 0.4s;
@@ -143,9 +144,7 @@ header .menu > label {
 header .menu > label img {
   width: 24px;
   height: 24px;
-}
-
-header .menu > label img {
+  text-align: center;
   margin: 7px;
 }
 
@@ -157,9 +156,6 @@ header .menu button {
   width: 40px;
   height: 40px;
   cursor: pointer;
-  border-radius: 3px;
-  border: 1px solid #767676;
-  background-color: #EFEFEF;
 }
 
 header .menu button img {
@@ -169,26 +165,15 @@ header .menu button img {
 
 header #print-dialog {
   display: none;
-  position: fixed;
-  left: 50%;
-  right: 50%;
-  top: 50%;
-  bottom: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #fff;
-  box-shadow: 0 0 0 10000px rgba(0, 0, 0, 0.5);
-  animation: fade 0.5s linear 0s;
   width: 200px;
   height: 100px;
-  padding: 8px;
-  color: #000;
-  border: 2px solid #000;
+  padding: 10px;
 }
 
 header #print-dialog.show {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 8px;
+  gap: 10px;
   grid-template-rows: repeat(2, 1fr);
 }
 
@@ -206,7 +191,7 @@ main .resume {
   width: 364mm;
   margin: 60px auto 10px;
   display: grid;
-  grid-template-columns: repeat(2, 182mm);
+  grid-template-columns: 182mm 182mm;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
@@ -289,7 +274,7 @@ main .resume .left-page .resume-header .creataion-date p.input-field {
 
 main .resume .left-page .id-photo {
   width: 28mm;
-  height: 35.5mm;
+  height: 36.5mm;
   padding: 8pt;
   position: absolute;
   top: 14mm;
@@ -313,6 +298,7 @@ main .resume .left-page .id-photo label {
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 1;
 }
 
 main .resume .left-page .id-photo label input {
@@ -336,8 +322,9 @@ main .resume .left-page .id-photo #contextmenu {
   width: 100px;
   height: 30px;
   border: 1px solid #333;
-  box-shadow: 1px 1px 3px #333;
-  background-color: #fff;
+  box-shadow: 2px 2px 5px #333;
+  background-color: #eee;
+  z-index: 2;
 }
 
 main .resume .left-page .id-photo #contextmenu.show {
@@ -351,7 +338,7 @@ main .resume .left-page .id-photo #contextmenu li {
 }
 
 main .resume .left-page .id-photo #contextmenu li:hover {
-  background-color: #9aa;
+  background-color: #aaa;
 }
 
 main .resume .left-page .personal-data p.label {
@@ -411,11 +398,10 @@ main .resume .left-page .personal-data .basic-data .name p.label {
 main .resume .left-page .personal-data .basic-data .name p.input-field {
   grid-column: 2 / 3;
   text-align: center;
-  font-size: 17pt;
+  font-size: 16pt;
 }
 
 main .resume .left-page .personal-data .basic-data .gender {
-  height: 22.3mm;
   grid-row: 1 / 3;
   grid-column: 2 / 3;
   border-top: 1mm solid #000;
@@ -534,9 +520,8 @@ main .resume .left-page .personal-data .emergency-contact .e-mail p.label {
 main .resume .left-page .personal-data .contact-info .e-mail p.input-field,
 main .resume .left-page .personal-data .emergency-contact .e-mail p.input-field {
   text-align: center;
-  font-size: 9pt;
+  font-size: 8pt;
   height: 9mm;
-  line-height: 9mm;
 }
 
 main .resume .left-page .personal-data .emergency-contact {
@@ -610,6 +595,8 @@ main .resume .right-page .education-and-career-history .resume-line {
 }
 
 main .resume .right-page .education-and-career-history .resume-line:first-of-type {
+  height: 8.3mm;
+  border-top: 1mm solid #000;
   border-bottom: 1mm double #000;
 }
 
@@ -623,7 +610,6 @@ main .resume .right-page .education-and-career-history .resume-line:last-of-type
 
 main .resume .right-page .education-and-career-history .resume-line p {
   line-height: 7.3mm;
-  padding: 0 1mm;
   border-right: 0.35mm solid #000;
 }
 
@@ -643,11 +629,6 @@ main .resume .right-page .education-and-career-history .resume-line p[data-text-
 
 main .resume .right-page .education-and-career-history .resume-line p[data-text-align="center"] {
   text-align: center;
-}
-
-main .resume .right-page .education-and-career-history .resume-line:first-of-type {
-  height: 8.3mm;
-  border-top: 1mm solid #000;
 }
 
 main .resume .right-page .qualifications .qualifications-line {
@@ -674,14 +655,13 @@ main .resume .right-page .qualifications .qualifications-line:last-of-type {
 }
 
 main .resume .right-page .qualifications .qualifications-line p {
-  line-height: 7.3mm;
   padding: 0 1mm;
+  line-height: 7.3mm;
   border-right: 0.35mm solid #000;
 }
 
 main .resume .right-page .qualifications .qualifications-line p:last-of-type {
   text-align: left;
-  padding: 0 2mm;
   border-right: none;
 }
 
@@ -809,22 +789,20 @@ main #help-window {
   display: none;
   position: fixed;
   left: 50%;
-  right: 50%;
   top: 50%;
-  bottom: 50%;
   transform: translate(-50%, -50%);
-  background-color: #fff;
-  box-shadow: 0 0 0 10000px rgba(0, 0, 0, 0.5);
-  animation: fade 0.5s linear 0s;
   width: 90vw;
   height: 90vh;
   padding: 16px;
   border-radius: 24px;
+  box-shadow: 0 0 0 10000px rgba(0, 0, 0, 0.5);
+  background-color: #fff;
+  animation: fade 0.5s linear 0s;
 }
 
 main #help-window.show {
   display: block;
-  z-index: 20;
+  z-index: 4;
 }
 
 main #help-window .help-close {
@@ -842,7 +820,7 @@ main #help-window .help-close::before {
   content: '';
   width: 30px;
   height: 5px;
-  background-color: #000;
+  background-color: #333;
   position: absolute;
   top: 0;
   right: 0;
@@ -856,7 +834,7 @@ main #help-window .help-close::after {
   content: '';
   width: 30px;
   height: 5px;
-  background-color: #000;
+  background-color: #333;
   position: absolute;
   top: 0;
   right: 0;
@@ -877,4 +855,4 @@ footer {
     display: none;
   }
 }
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=a3.css.map */
