--- a/css/b4.css
+++ b/css/b4.css
@@ -26,7 +26,7 @@ img {
   height: auto;
 }
 
-/* page styleing b4
+/* page styleing
 ---------------------------------------------------------------------------- */
 html, body {
   scroll-behavior: smooth;
@@ -38,7 +38,7 @@ body * {
 
 @media screen {
   body {
-    background-color: green;
+    background-color: #eee;
   }
 }
 
@@ -54,7 +54,7 @@ header {
   background-color: #fff;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 @media print {
@@ -83,7 +83,7 @@ header .menu .editing-switch input {
 }
 
 header .menu .editing-switch input:checked + label {
-  background-color: #4BD865;
+  background-color: #4bd865;
 }
 
 header .menu .editing-switch input:checked + label::before {
@@ -125,7 +125,6 @@ header .menu .editing-switch label::after {
   width: 20px;
   height: 20px;
   border-radius: 100%;
-  z-index: 2;
   background-color: #fff;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   transition: 0.4s;
@@ -144,7 +143,9 @@ header .menu > label {
 header .menu > label img {
   width: 24px;
   height: 24px;
-  text-align: center;
+}
+
+header .menu > label img {
   margin: 7px;
 }
 
@@ -156,6 +157,9 @@ header .menu button {
   width: 40px;
   height: 40px;
   cursor: pointer;
+  border-radius: 3px;
+  border: 1px solid #767676;
+  background-color: #EFEFEF;
 }
 
 header .menu button img {
@@ -165,15 +169,26 @@ header .menu button img {
 
 header #print-dialog {
   display: none;
+  position: fixed;
+  left: 50%;
+  right: 50%;
+  top: 50%;
+  bottom: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  box-shadow: 0 0 0 10000px rgba(0, 0, 0, 0.5);
+  animation: fade 0.5s linear 0s;
   width: 200px;
   height: 100px;
-  padding: 10px;
+  padding: 8px;
+  color: #000;
+  border: 2px solid #000;
 }
 
 header #print-dialog.show {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
+  gap: 8px;
   grid-template-rows: repeat(2, 1fr);
 }
 
@@ -191,7 +206,7 @@ main .resume {
   width: 364mm;
   margin: 60px auto 10px;
   display: grid;
-  grid-template-columns: 182mm 182mm;
+  grid-template-columns: repeat(2, 182mm);
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
@@ -274,7 +289,7 @@ main .resume .left-page .resume-header .creataion-date p.input-field {
 
 main .resume .left-page .id-photo {
   width: 28mm;
-  height: 36.5mm;
+  height: 35.5mm;
   padding: 8pt;
   position: absolute;
   top: 14mm;
@@ -298,7 +313,6 @@ main .resume .left-page .id-photo label {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1;
 }
 
 main .resume .left-page .id-photo label input {
@@ -322,9 +336,8 @@ main .resume .left-page .id-photo #contextmenu {
   width: 100px;
   height: 30px;
   border: 1px solid #333;
-  box-shadow: 2px 2px 5px #333;
-  background-color: #eee;
-  z-index: 2;
+  box-shadow: 1px 1px 3px #333;
+  background-color: #fff;
 }
 
 main .resume .left-page .id-photo #contextmenu.show {
@@ -338,7 +351,7 @@ main .resume .left-page .id-photo #contextmenu li {
 }
 
 main .resume .left-page .id-photo #contextmenu li:hover {
-  background-color: #aaa;
+  background-color: #9aa;
 }
 
 main .resume .left-page .personal-data p.label {
@@ -398,10 +411,11 @@ main .resume .left-page .personal-data .basic-data .name p.label {
 main .resume .left-page .personal-data .basic-data .name p.input-field {
   grid-column: 2 / 3;
   text-align: center;
-  font-size: 16pt;
+  font-size: 17pt;
 }
 
 main .resume .left-page .personal-data .basic-data .gender {
+  height: 22.3mm;
   grid-row: 1 / 3;
   grid-column: 2 / 3;
   border-top: 1mm solid #000;
@@ -520,8 +534,9 @@ main .resume .left-page .personal-data .emergency-contact .e-mail p.label {
 main .resume .left-page .personal-data .contact-info .e-mail p.input-field,
 main .resume .left-page .personal-data .emergency-contact .e-mail p.input-field {
   text-align: center;
-  font-size: 8pt;
+  font-size: 9pt;
   height: 9mm;
+  line-height: 9mm;
 }
 
 main .resume .left-page .personal-data .emergency-contact {
@@ -595,8 +610,6 @@ main .resume .right-page .education-and-career-history .resume-line {
 }
 
 main .resume .right-page .education-and-career-history .resume-line:first-of-type {
-  height: 8.3mm;
-  border-top: 1mm solid #000;
   border-bottom: 1mm double #000;
 }
 
@@ -610,6 +623,7 @@ main .resume .right-page .education-and-career-history .resume-line:last-of-type
 
 main .resume .right-page .education-and-career-history .resume-line p {
   line-height: 7.3mm;
+  padding: 0 1mm;
   border-right: 0.35mm solid #000;
 }
 
@@ -629,6 +643,11 @@ main .resume .right-page .education-and-career-history .resume-line p[data-text-
 
 main .resume .right-page .education-and-career-history .resume-line p[data-text-align="center"] {
   text-align: center;
+}
+
+main .resume .right-page .education-and-career-history .resume-line:first-of-type {
+  height: 8.3mm;
+  border-top: 1mm solid #000;
 }
 
 main .resume .right-page .qualifications .qualifications-line {
@@ -655,13 +674,14 @@ main .resume .right-page .qualifications .qualifications-line:last-of-type {
 }
 
 main .resume .right-page .qualifications .qualifications-line p {
-  padding: 0 1mm;
   line-height: 7.3mm;
+  padding: 0 1mm;
   border-right: 0.35mm solid #000;
 }
 
 main .resume .right-page .qualifications .qualifications-line p:last-of-type {
   text-align: left;
+  padding: 0 2mm;
   border-right: none;
 }
 
@@ -685,10 +705,6 @@ main .resume .right-page .motivation {
 
 main .resume .right-page .motivation p {
   padding: 1mm;
-}
-
-main .resume .right-page .motivation .label {
-  font-size: 10pt;
 }
 
 main .resume .right-page .motivation .self-promotion {
@@ -789,20 +805,22 @@ main #help-window {
   display: none;
   position: fixed;
   left: 50%;
+  right: 50%;
   top: 50%;
+  bottom: 50%;
   transform: translate(-50%, -50%);
+  background-color: #fff;
+  box-shadow: 0 0 0 10000px rgba(0, 0, 0, 0.5);
+  animation: fade 0.5s linear 0s;
   width: 90vw;
   height: 90vh;
   padding: 16px;
   border-radius: 24px;
-  box-shadow: 0 0 0 10000px rgba(0, 0, 0, 0.5);
-  background-color: #fff;
-  animation: fade 0.5s linear 0s;
 }
 
 main #help-window.show {
   display: block;
-  z-index: 4;
+  z-index: 20;
 }
 
 main #help-window .help-close {
@@ -820,7 +838,7 @@ main #help-window .help-close::before {
   content: '';
   width: 30px;
   height: 5px;
-  background-color: #333;
+  background-color: #000;
   position: absolute;
   top: 0;
   right: 0;
@@ -834,7 +852,7 @@ main #help-window .help-close::after {
   content: '';
   width: 30px;
   height: 5px;
-  background-color: #333;
+  background-color: #000;
   position: absolute;
   top: 0;
   right: 0;
