--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1,6 +1,3 @@
-@import "reset";
-@import "variable";
-@import "mixin";
 // * {
 //   outline: 1px solid red;
 // }
@@ -475,13 +472,13 @@ main {
       }
       .motivation{
         display: grid;
-        grid-template-columns: 89mm 29mm 30mm;
-        grid-template-rows: repeat(3, 14.6mm);
+        grid-template-columns: $motivation-grid-t-cols;
+        grid-template-rows: repeat(3, $motivation-rows-width);
         p {
-          padding: 1mm;
+          padding: $motivation-padding;
         }
         .label {
-          font-size: 10pt;
+          $motivation-label-font-size: 10pt;
         }
         .self-promotion {
           grid-row: 1 / 4;
@@ -493,7 +490,7 @@ main {
           }
           p {
             &.input-field{
-              height: 37mm;
+              height: $self-promotion-input-field-height;
             }
           }
         }
@@ -507,7 +504,7 @@ main {
           .commuting-time-line {
             text-align: center;
             display: grid;
-            grid-template-columns: 19mm 10mm 10mm 10mm 10mm;
+            grid-template-columns: $commuting-time-line-grid-t-cols;
             .input-field {
               text-align: right;
             }
@@ -522,7 +519,7 @@ main {
           }
           .dependents-line {
             display: grid;
-            grid-template-columns: 40mm 19mm;
+            grid-template-columns: $dependents-line-grid-t-cols;
             p {
               &.input-field {
                 text-align: right;
@@ -549,7 +546,7 @@ main {
             bottom: $print-line-bold;
           }
           .label {
-            font-size: 9pt;
+            font-size: $obligation-to-support-spouse-label-font-size;
           }
           .input-field {
             text-align: center;
@@ -565,17 +562,17 @@ main {
           left: $print-line-bold;
         }
         p {
-          padding: 1mm;
+          padding: $objective-p-padding;
           &.label {
-            height: 7.3mm;
-            line-height: 4.3mm;
-            font-size: 10pt;
+            height: $objective-label-height;
+            line-height: $objective-line-height;
+            font-size: $objective-label-font-size;
             border: {
               bottom: $print-line-double;
             }
           }
           &.input-field {
-            height: 43.8mm;
+            height: $objective-input-field-height;
           }  
         }
       }
