--- a/scss/_b5-variable.scss
+++ b/scss/_b5-variable.scss
@@ -4,7 +4,8 @@
 $base-color: #fff;
 $font-color: #000;
 $line-color: #000;
-$body-bg-color: #eee;
+// $body-bg-color: #eee;
+$body-bg-color: green;
 $border-color: #333;
 $enable-color: #4bd865;
 $disable-color: #ccc;
